# Pathfinder_StreamlitWebApplication

./: README.md
streamlit-project/: app.py  clients.csv  pyproject.toml  requirements.txt
streamlit-project/pages/: consultation.py  registration.py
