[project]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco",email = "marcoantonioporsch@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
