[tool.poetry]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = ["Marco<marcoantonioporsch@live.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.42.2",
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
